--- a/Part-1/Form_Filter/index.html
+++ b/Part-1/Form_Filter/index.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Forms</title>
+  <title>Bloody Forms & Filters</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/superhero/bootstrap.min.css">
+  <link rel="stylesheet" href="styles.css">
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/5.0.0/math.min.js"></script>
 </head>
@@ -27,7 +28,14 @@
     <div class="row">
       <div class="col-md-12">
         <h1>Filtered Data Summary</h1>
+        <p id="stats_h3">Statistics for patients' ages</p>
         <ul class="summary"></ul>
+        <br>
+        <h1>Table of Patients</h1>
+        <table class="table table-striped" id="bloodyTable">
+          <tbody id="bloodyTBody">
+          </tbody>
+        </table>
       </div>
     </div>
   </div>
