--- a/Part-2/UFO_level_1/index.html
+++ b/Part-2/UFO_level_1/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/superhero/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
   <link rel="stylesheet" href="../static/css/style.css">
+  <link rel="icon" type="image/ico" href="../static/images/favicon.ico" sizes=16x16/>
 </head>
 
 <body>
