--- a/Part-2/UFO_level_2/index.html
+++ b/Part-2/UFO_level_2/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/superhero/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
   <link rel="stylesheet" href="../static/css/style.css">
+  <link rel="icon" type="image/ico" href="../static/images/favicon.ico" sizes=16x16/>
 </head>
 
 <body>
@@ -86,6 +87,14 @@
                         <label for="date">
                           (exclude leading zeros)
                         </label>
+<!--                      <select class="custom-select">
+                          <option selected>Select a date</option>
+                          <option value="1">One</option>
+                          <option value="2">Two</option>
+                          <option value="3">Three</option>
+reference https://stackoverflow.com/questions/40927778/d3-to-return-unique-values-to-menu-combobox                        
+                        </select>
+-->                        
                       </li>
                       <li class="filter list-group-item">
                         <button id="filterDateBtn" type="button" class="btn btn-default">
@@ -120,7 +129,7 @@
                         </label>
                       </li>
                       <li class="filter list-group-item">
-                        <button id="filterDateBtn" type="button" class="btn btn-default">
+                        <button id="filterCityBtn" type="button" class="btn btn-default">
                           Filter
                         </button>
                       </li>
